// Vitest Snapshot v1

exports[`load station status > load 1 with no queues > load 1 with no queues 1`] = `
{
  "allJobsHaveRawMatQueue": false,
  "face": Map {
    "1" => [],
  },
  "free": undefined,
  "freeLoadingMaterial": [
    {
      "action": {
        "elapsedLoadUnloadTime": undefined,
        "elapsedMachiningTime": undefined,
        "expectedRemainingMachiningTime": undefined,
        "loadOntoFace": 1,
        "loadOntoPallet": "1",
        "pathAfterLoad": 1,
        "processAfterLoad": 1,
        "program": undefined,
        "type": "Loading",
        "unloadIntoQueue": undefined,
      },
      "jobUnique": "aaa-offline-2018-01-01",
      "lastCompletedMachiningRouteStopIndex": undefined,
      "location": {
        "currentQueue": undefined,
        "face": undefined,
        "pallet": undefined,
        "queuePosition": undefined,
        "type": "Free",
      },
      "materialID": 100663,
      "partName": "bbb",
      "path": 1,
      "process": 1,
      "serial": "NRWGM",
      "signaledInspections": [],
      "workorderId": undefined,
    },
  ],
  "loadNum": 1,
  "pallet": {
    "currentPalletLocation": {
      "group": "L/U",
      "loc": "LoadUnload",
      "num": 1,
    },
    "fixtureOnPallet": "fix1",
    "newFixture": undefined,
    "numFaces": 2,
    "onHold": false,
    "pallet": "1",
    "percentMoveCompleted": undefined,
    "targetLocation": undefined,
  },
  "queues": Map {},
  "stationStatus": undefined,
}
`;

exports[`load station status > load 2 with queue > load 2 with queue 1`] = `
{
  "allJobsHaveRawMatQueue": false,
  "face": Map {
    "1" => [],
  },
  "free": undefined,
  "freeLoadingMaterial": [],
  "loadNum": 2,
  "pallet": {
    "currentPalletLocation": {
      "group": "L/U",
      "loc": "LoadUnload",
      "num": 2,
    },
    "fixtureOnPallet": "fix5",
    "newFixture": undefined,
    "numFaces": 1,
    "onHold": false,
    "pallet": "5",
    "percentMoveCompleted": undefined,
    "targetLocation": undefined,
  },
  "queues": Map {
    "Queue1" => [
      {
        "action": {
          "elapsedLoadUnloadTime": undefined,
          "elapsedMachiningTime": undefined,
          "expectedRemainingMachiningTime": undefined,
          "loadOntoFace": undefined,
          "loadOntoPallet": undefined,
          "pathAfterLoad": undefined,
          "processAfterLoad": undefined,
          "program": undefined,
          "type": "Waiting",
          "unloadIntoQueue": undefined,
        },
        "jobUnique": "aaa-offline-2018-01-01",
        "lastCompletedMachiningRouteStopIndex": undefined,
        "location": {
          "currentQueue": "Queue1",
          "face": undefined,
          "pallet": undefined,
          "queuePosition": 0,
          "type": "InQueue",
        },
        "materialID": 104289,
        "partName": "aaa",
        "path": 1,
        "process": 1,
        "serial": "MRYHE",
        "signaledInspections": [],
        "workorderId": undefined,
      },
      {
        "action": {
          "elapsedLoadUnloadTime": undefined,
          "elapsedMachiningTime": undefined,
          "expectedRemainingMachiningTime": undefined,
          "loadOntoFace": undefined,
          "loadOntoPallet": undefined,
          "pathAfterLoad": undefined,
          "processAfterLoad": undefined,
          "program": undefined,
          "type": "Waiting",
          "unloadIntoQueue": undefined,
        },
        "jobUnique": "xxx-offline-2018-01-01",
        "lastCompletedMachiningRouteStopIndex": undefined,
        "location": {
          "currentQueue": "Queue1",
          "face": undefined,
          "pallet": undefined,
          "queuePosition": 1,
          "type": "InQueue",
        },
        "materialID": 104458,
        "partName": "xxx",
        "path": 1,
        "process": 1,
        "serial": "NBVHA",
        "signaledInspections": [],
        "workorderId": undefined,
      },
      {
        "action": {
          "elapsedLoadUnloadTime": undefined,
          "elapsedMachiningTime": undefined,
          "expectedRemainingMachiningTime": undefined,
          "loadOntoFace": 1,
          "loadOntoPallet": "5",
          "pathAfterLoad": 1,
          "processAfterLoad": 1,
          "program": undefined,
          "type": "Loading",
          "unloadIntoQueue": undefined,
        },
        "jobUnique": "zzz-offline-2018-01-01",
        "lastCompletedMachiningRouteStopIndex": undefined,
        "location": {
          "currentQueue": "Queue1",
          "face": undefined,
          "pallet": undefined,
          "queuePosition": 2,
          "type": "InQueue",
        },
        "materialID": 102304,
        "partName": "zzz",
        "path": 1,
        "process": 1,
        "serial": "MZQGQ",
        "signaledInspections": [],
        "workorderId": undefined,
      },
    ],
  },
  "stationStatus": undefined,
}
`;

exports[`load station status > load 3 with empty pallet > load 3 with empty pallet 1`] = `
{
  "allJobsHaveRawMatQueue": false,
  "face": Map {},
  "free": undefined,
  "freeLoadingMaterial": [],
  "loadNum": 3,
  "pallet": undefined,
  "queues": Map {
    "Queue2" => [
      {
        "action": {
          "elapsedLoadUnloadTime": undefined,
          "elapsedMachiningTime": undefined,
          "expectedRemainingMachiningTime": undefined,
          "loadOntoFace": undefined,
          "loadOntoPallet": undefined,
          "pathAfterLoad": undefined,
          "processAfterLoad": undefined,
          "program": undefined,
          "type": "Waiting",
          "unloadIntoQueue": undefined,
        },
        "jobUnique": "ccc-offline-2018-01-01",
        "lastCompletedMachiningRouteStopIndex": undefined,
        "location": {
          "currentQueue": "Queue2",
          "face": undefined,
          "pallet": undefined,
          "queuePosition": 0,
          "type": "InQueue",
        },
        "materialID": 104824,
        "partName": "ccc",
        "path": 1,
        "process": 1,
        "serial": "OBSGQ",
        "signaledInspections": [],
        "workorderId": undefined,
      },
      {
        "action": {
          "elapsedLoadUnloadTime": undefined,
          "elapsedMachiningTime": undefined,
          "expectedRemainingMachiningTime": undefined,
          "loadOntoFace": undefined,
          "loadOntoPallet": undefined,
          "pathAfterLoad": undefined,
          "processAfterLoad": undefined,
          "program": undefined,
          "type": "Waiting",
          "unloadIntoQueue": undefined,
        },
        "jobUnique": "zzz-offline-2018-01-01",
        "lastCompletedMachiningRouteStopIndex": undefined,
        "location": {
          "currentQueue": "Queue2",
          "face": undefined,
          "pallet": undefined,
          "queuePosition": 1,
          "type": "InQueue",
        },
        "materialID": 105125,
        "partName": "zzz",
        "path": 1,
        "process": 1,
        "serial": "MJSGU",
        "signaledInspections": [],
        "workorderId": undefined,
      },
    ],
  },
  "stationStatus": Map {
    "Machine #1" => {
      "pal": {
        "material": [],
        "pallet": {
          "currentPalletLocation": {
            "group": "Machine",
            "loc": "Machine",
            "num": 1,
          },
          "fixtureOnPallet": "fix4",
          "newFixture": undefined,
          "numFaces": 2,
          "onHold": false,
          "pallet": "4",
          "percentMoveCompleted": undefined,
          "targetLocation": undefined,
        },
      },
    },
    "Machine #2" => {
      "pal": {
        "material": [],
        "pallet": {
          "currentPalletLocation": {
            "group": "Machine",
            "loc": "Machine",
            "num": 2,
          },
          "fixtureOnPallet": "fix6",
          "newFixture": undefined,
          "numFaces": 1,
          "onHold": false,
          "pallet": "6",
          "percentMoveCompleted": undefined,
          "targetLocation": undefined,
        },
      },
      "queued": {
        "material": [],
        "pallet": {
          "currentPalletLocation": {
            "group": "Machine",
            "loc": "MachineQueue",
            "num": 2,
          },
          "fixtureOnPallet": "fix7",
          "newFixture": undefined,
          "numFaces": 1,
          "onHold": false,
          "pallet": "7",
          "percentMoveCompleted": undefined,
          "targetLocation": undefined,
        },
      },
    },
    "Machine #3" => {
      "pal": {
        "material": [],
        "pallet": {
          "currentPalletLocation": {
            "group": "Machine",
            "loc": "Machine",
            "num": 3,
          },
          "fixtureOnPallet": "fix8",
          "newFixture": undefined,
          "numFaces": 1,
          "onHold": false,
          "pallet": "8",
          "percentMoveCompleted": undefined,
          "targetLocation": undefined,
        },
      },
    },
    "L/U #1" => {
      "pal": {
        "material": [],
        "pallet": {
          "currentPalletLocation": {
            "group": "L/U",
            "loc": "LoadUnload",
            "num": 1,
          },
          "fixtureOnPallet": "fix1",
          "newFixture": undefined,
          "numFaces": 2,
          "onHold": false,
          "pallet": "1",
          "percentMoveCompleted": undefined,
          "targetLocation": undefined,
        },
      },
    },
    "L/U #2" => {
      "pal": {
        "material": [],
        "pallet": {
          "currentPalletLocation": {
            "group": "L/U",
            "loc": "LoadUnload",
            "num": 2,
          },
          "fixtureOnPallet": "fix5",
          "newFixture": undefined,
          "numFaces": 1,
          "onHold": false,
          "pallet": "5",
          "percentMoveCompleted": undefined,
          "targetLocation": undefined,
        },
      },
    },
  },
}
`;
